# BookTTS

./: .gitignore  AGENTS.md  Cargo.toml  MEMORY.md  README.md  SESSION.json  package-lock.json  package.json  price_calc.py  price_calc2.py  tauri.conf.json  tts-project-structure.md
.beads/: config.yaml  metadata.json
.github/workflows/: deploy-demo.yml
.sisyphus/notepads/fix-ci-demo-peer-deps/: post-mortem.md
.sisyphus/plans/: fix-ci-demo-peer-deps.md  fix-tsc-frontend-errors.md
BookTTS/: tauri.conf.json
BookTTS/src/: main.rs
BookTTS/src/audio/: mixer.rs
BookTTS/src/parser/: mod.rs
BookTTS/src/tts/backends/: candle.rs  mod.rs
docs/: tts-app-architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.demo.js  tailwind.config.js  vite.config.demo.ts  vite.config.ts
frontend/mock/: api.ts  shim-tauri-core.ts  shim-tauri-dialog.ts
frontend/mock/@tauri-apps/: plugin-dialog.ts
frontend/mock/@tauri-apps/api/: core.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: tauri.ts
frontend/src/components/: FileImport.tsx
frontend/src/components/AudioPlayer/: ChunkTimeline.tsx  WaveformPlayer.tsx
frontend/src/components/Editor/: EditorToolbar.tsx  MilkdownEditor.tsx
frontend/src/components/Layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/Voice/: VoiceCloner.tsx  VoiceSettings.tsx
frontend/src/hooks/: useTTS.ts  useTauri.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
projects/42/: Подбор мебели и материалов.xlsx
src/tts/: engine.rs  mod.rs  model_manager.rs
src/tts/backends/: mlx.rs
